--- a/USPET_DO_PARI.html
+++ b/USPET_DO_PARI.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script src="enable-threads.js"></script>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<title>USPET DO PARI</title>
@@ -138,7 +139,7 @@ body {
 
 		<script src="USPET_DO_PARI.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"USPET_DO_PARI","experimentalVK":false,"fileSizes":{"USPET_DO_PARI.pck":26674528,"USPET_DO_PARI.wasm":35649444},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"USPET_DO_PARI.service.worker.js"};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"USPET_DO_PARI","experimentalVK":true,"fileSizes":{"USPET_DO_PARI.pck":27212416,"USPET_DO_PARI.wasm":35649444},"focusCanvas":true,"gdextensionLibs":[],"serviceWorker":"USPET_DO_PARI.service.worker.js"};
 const engine = new Engine(GODOT_CONFIG);
 
 (function () {
