--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</div>
 						<div class="main-main_row_big">
 							<img class="main-main_row_big_picture" src="images/play.png" alt="">
-							<a class="game_href" href="godot-game/USPET_DO_PARI.html" target="_blank">Запустить игру</a>
+							<a class="game_href" href="USPET_DO_PARI.html" target="_blank">Запустить игру</a>
 						</div>
 						<div class="main-main_row_lit">
 							<img class="main-main_row_lit_picture main-main_row_lit_picture_2" src="images/image3.gif" alt="">
